--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+
+<main class="container-sm">
+    <router-outlet></router-outlet>
+</main>
