--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,13 +2,27 @@
     <div class="col-md-12">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" [routerLink]="links[0].url">Liste de naissance</a>
+                <a class="navbar-brand" [routerLink]="links.left[0].url">Liste de naissance</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        @for (link of links; track link) {
+                        @for (link of links.left; track link) {
+                            <li class="nav-item">
+                                <a class="nav-link" [routerLink]="link.url" (click)="link.action ? link.action() : ''" role="button">
+                                    @if (link.icon) {
+                                        <fa-icon [icon]="link.icon!"></fa-icon>
+                                    }
+                                    @if (link.title) {
+                                        {{ link.title }}
+                                    }
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        @for (link of links.right; track link) {
                             <li class="nav-item">
                                 <a class="nav-link" [routerLink]="link.url" (click)="link.action ? link.action() : ''" role="button">
                                     @if (link.icon) {
