--- a/src/app/features/childlist/pages/ownchildlist/ownchildlist.component.html
+++ b/src/app/features/childlist/pages/ownchildlist/ownchildlist.component.html
@@ -22,7 +22,7 @@
                                 <td>{{cl.birthdate}}</td>
                                 <td>
                                     <a href="#" class="btn btn-outline-secondary"><fa-icon [icon]="faEye"></fa-icon></a>
-                                    <a href="#" class="btn btn-outline-secondary"><fa-icon [icon]="faXmark"></fa-icon></a>
+                                    <a (click)="deleteList(cl.childlist_id)" class="btn btn-outline-secondary"><fa-icon [icon]="faXmark"></fa-icon></a>
                                 </td>
                             </tr>
                         }
@@ -30,6 +30,40 @@
                 </tbody>
             </table>
         </div>
+    </article>
+
+    <article>
+        <h3>Créer une liste</h3>
+
+        <div class="m-3 p-2 border border-3 border-black">
+            <form [formGroup]="newlistForm" (ngSubmit)="submit()">
+                <div class="row mb-3">
+                    <label for="firstname" class="col-sm-2 col-form-label">Prenom de l'enfant</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="firstname" formControlName="firstname">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="lastname" class="col-sm-2 col-form-label">Nom de l'enfant</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="lastname" formControlName="lastname">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="birthdate" class="col-sm-2 col-form-label">Date prévue de la naissance</label>
+                    <div class="col-sm-10">
+                        <input type="date" class="form-control" id="birthdate" formControlName="birthdate">
+                    </div>
+                </div>
+                <div class="d-grid">
+                    <button type="submit" class="btn btn-primary">
+                        <fa-icon [icon]="faSave"></fa-icon>
+                        Créer la liste
+                    </button>
+                </div>
+            </form>
+        </div>
+
     </article>
 
 
