Avance sur la prod

--- a/src/app/features/childlist/pages/account/account.component.html
+++ b/src/app/features/childlist/pages/account/account.component.html
@@ -2,15 +2,15 @@
     <h2 class="mb-sm-5 col-sm-12">Bienvenue UTILISATEUR</h2>
 
     <div class="d-flex flex-column flex-md-row gap-2 justify-content-center mb-3">
-        <a class="btn btn-primary flex-fill" [routerLink]="'/childlist/ownchildlist'">
+        <a class="btn btn-primary flex-fill" routerLink="/childlist/ownchildlist">
             <fa-icon [icon]="faList"></fa-icon>
             Gestions des listes
         </a>
 
-        <button class="btn btn-primary flex-fill" type="button">
+        <a class="btn btn-primary flex-fill" routerLink="/childlist/ownchildlist/new">
             <fa-icon [icon]="faCirclePlus"></fa-icon>
             Ajout d'un article
-        </button>
+        </a>
 
         <button class="btn btn-primary flex-fill" type="button" (click)="logout()">
             <fa-icon [icon]="faRightFromBracket"></fa-icon>
