Avance sur la prod

--- a/src/app/features/childlist/pages/cart/cart.component.html
+++ b/src/app/features/childlist/pages/cart/cart.component.html
@@ -1,3 +1,41 @@
-@for (i of cartItems; track i) {
-    {{ i }}
-}
+<section class="row mx-auto mt-3">
+    <h2 class="col-md-12 mb-4">Panier</h2>
+
+    <article>
+        <div class="m-3 mx-1 p-4 border border-3 border-black">
+            @for (item of cartItems; track item.childlistitem_id) {
+                <div class="row flex-wrap gap-4 flex-md-nowrap gap-md-0 ">
+                    <div class="col-md-2 d-flex justify-content-center">
+                        <img [src]="item.image" class="img-fluid" style="height: 250px;">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="card-body d-flex flex-column h-100">
+                            <h5 class="card-title">{{ item.name }}</h5>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">{{ item.price | currency }}</h6>
+                            <p class="card-text text-wrap">{{ item.description }} </p>
+                            <p class="card-text mt-auto"><small class="text-body-secondary">Liste de (j'ai oublié de mettre ca dans l'API)</small></p>
+                        </div>
+                    </div>
+                    <div class="col-md-1 d-grid">
+                        <button class="btn btn-outline-danger" (click)="deleteItem(item.childlistitem_id)">
+                            <fa-icon [icon]="faTrash"></fa-icon>
+                        </button>
+                    </div>
+                </div>
+                <hr>
+            }
+
+            @if (cartItems.length === 0) {
+                <p class="text-center m-0">Votre panier est vide</p>
+            }
+            @else {
+                <div class="d-grid">
+                    <button class="btn btn-primary">
+                        <fa-icon [icon]="faCartShopping"></fa-icon>
+                        Payer
+                    </button>
+                </div>
+            }
+        </div>
+    </article>
+</section>
