Avancé sur la prod

--- a/src/app/features/childlist/pages/item/item.component.html
+++ b/src/app/features/childlist/pages/item/item.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="d-grid mt-3">
-        <button class='btn btn-block btn-primary' (click)="addToCart(idItem)">
+        <button class='btn btn-block btn-primary' (click)="addToCart(childlistitem.childlistitem_id)">
             <fa-icon [icon]="faCartPlus"></fa-icon>
             Ajouter au Panier
         </button>
