--- a/src/app/features/childlist/pages/item/item.component.html
+++ b/src/app/features/childlist/pages/item/item.component.html
@@ -26,10 +26,12 @@
         </div>
     </div>
 
-    <div class="d-grid mt-3">
-        <button class='btn btn-block btn-primary' (click)="addToCart(childlistitem.childlistitem_id)">
-            <fa-icon [icon]="faCartPlus"></fa-icon>
-            Ajouter au Panier
-        </button>
-    </div>
+    @if (!hideCardButton) {
+        <div class="d-grid mt-3">
+            <button class='btn btn-block btn-primary' (click)="addToCart(childlistitem.childlistitem_id)">
+                <fa-icon [icon]="faCartPlus"></fa-icon>
+                Ajouter au Panier
+            </button>
+        </div>
+    }
 </section>
