--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,16 +1,17 @@
-<header class="row">
+<header>
+    <div class="col-12 header-img"></div>
     <div class="col-md-12">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" [routerLink]="links.left[0].url">Liste de naissance</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmobile" aria-controls="navbarmobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-between" id="navbarmobile">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         @for (link of links.left; track link) {
                             <li class="nav-item">
-                                <a class="nav-link" [routerLink]="link.url" (click)="link.action ? link.action() : ''" role="button">
+                                <a class="nav-link" [routerLink]="link.url" (click)="link.action ? link.action() : ''" role="button" data-bs-toggle="collapse" data-bs-target="#navbarmobile">
                                     @if (link.icon) {
                                         <fa-icon [icon]="link.icon!"></fa-icon>
                                     }
@@ -24,7 +25,7 @@
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         @for (link of links.right; track link) {
                             <li class="nav-item">
-                                <a class="nav-link position-relative" [routerLink]="link.url" (click)="link.action ? link.action() : ''" role="button">
+                                <a class="nav-link position-relative" [routerLink]="link.url" (click)="link.action ? link.action() : ''" role="button" data-bs-toggle="collapse" data-bs-target="#navbarmobile">
                                     @if (link.icon) {
                                         <fa-icon [icon]="link.icon!"></fa-icon>
                                     }
