--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -1,12 +1,46 @@
-<h2>Login Form</h2>
-<form [formGroup]="loginForm" (ngSubmit)="submit()">
-    <div>
-        <label for="username">Username : </label>
-        <input id="username" type="text" formControlName="username" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input id="password" type="password" formControlName="password" required>
-    </div>
-    <button type="submit">Login</button>
-</form>
+<section class="row mx-auto m-3">
+    <article class="mt-3 border border-3 border-black">
+        <h3 class="mt-3">Connexion</h3>
+
+        <div class="m-3 p-2 border border-3 border-black">
+
+            <form [formGroup]="loginForm" (ngSubmit)="submit()">
+
+                <div class="form-floating m-3">
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="username"
+                        placeholder="un username"
+                        formControlName="username"
+                        [ngClass]="{'is-invalid': loginForm.get('username')?.invalid && (loginForm.get('username')?.touched)}"
+                    >
+                    <label for="username">Nom d'utilisateur</label>
+                    <app-form-error [control]="loginForm.get('username')"></app-form-error>
+                </div>
+
+                <div class="form-floating m-3">
+                    <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        placeholder="un password"
+                        formControlName="password"
+                        [ngClass]="{'is-invalid': loginForm.get('password')?.invalid && (loginForm.get('password')?.touched)}"
+                    >
+                    <label for="password">Mot de passe</label>
+                    <app-form-error [control]="loginForm.get('password')"></app-form-error>
+                </div>
+
+                <div class="d-grid m-3">
+                    <button type="submit" class="btn btn-primary">
+                        <fa-icon [icon]="faRightToBracket"></fa-icon>
+                        Connexion
+                    </button>
+                </div>
+            </form>
+
+        </div>
+
+    </article>
+</section>
