--- a/src/app/features/childlist/pages/account/account.component.html
+++ b/src/app/features/childlist/pages/account/account.component.html
@@ -1,5 +1,5 @@
 <section class="row mx-auto mt-3">
-    <h2 class="mb-sm-5 col-sm-12">Bienvenue UTILISATEUR</h2>
+    <h2 class="mb-sm-5 col-sm-12">Bienvenue {{currentUser | titlecase}}</h2>
 
     <div class="d-flex flex-column flex-md-row gap-2 justify-content-center mb-3">
         <a class="btn btn-primary flex-fill" routerLink="/childlist/ownchildlist">
