--- a/src/app/features/childlist/pages/cart/cart.component.html
+++ b/src/app/features/childlist/pages/cart/cart.component.html
@@ -1,19 +1,19 @@
 <section class="row mx-auto mt-3">
     <h2 class="col-md-12 mb-4">Panier</h2>
 
-    <article>
+    <article class="my-3 border border-3 border-black">
         <div class="m-3 mx-1 p-4 border border-3 border-black">
             @for (item of cartItems; track item.childlistitem_id) {
                 <div class="row flex-wrap gap-4 flex-md-nowrap gap-md-0 ">
-                    <div class="col-md-2 d-flex justify-content-center">
-                        <img [src]="item.image" class="img-fluid" style="height: 250px;">
+                    <div class="col-md-2 d-flex justify-content-center" style="height: 200px">
+                        <img [src]="item.image" class="img-fluid img-thumbnail object-fit-contain">
                     </div>
                     <div class="col-md-9">
                         <div class="card-body d-flex flex-column h-100">
                             <h5 class="card-title">{{ item.name }}</h5>
                             <h6 class="card-subtitle mb-2 text-body-secondary">{{ item.price | currency }}</h6>
                             <p class="card-text text-wrap">{{ item.description }} </p>
-                            <p class="card-text mt-auto"><small class="text-body-secondary">Liste de (j'ai oublié de mettre ca dans l'API)</small></p>
+                            <p class="card-text mt-auto"><small class="text-body-secondary">Liste de {{item.childlist?.firstname | titlecase}} {{item.childlist?.lastname | titlecase}}</small></p>
                         </div>
                     </div>
                     <div class="col-md-1 d-grid">
@@ -30,7 +30,7 @@
             }
             @else {
                 <div class="d-grid">
-                    <button class="btn btn-primary">
+                    <button class="btn btn-primary" (click)="buy()">
                         <fa-icon [icon]="faCartShopping"></fa-icon>
                         Payer
                     </button>
