--- a/src/app/features/childlist/pages/ownchildlistshow/ownchildlistshow.component.html
+++ b/src/app/features/childlist/pages/ownchildlistshow/ownchildlistshow.component.html
@@ -1,39 +1,49 @@
 <section class="row mx-auto mt-3">
     <h2 class="col-md-12">Article(s) en attente sur cette liste</h2>
+    <article class="my-3 border border-3 border-black">
+    @if (countNotBought === 0) {
+        <div class="m-3 p-2 border border-3 border-black">
+            <p class="text-center m-0">Aucun(s) article(s) en attente d'achat</p>
+        </div>
+    }
     @for (it of childlist.items; track it.childlistitem_id) {
         @if (it.boughtBy === null) {
-            <div class="col-md-12">
-                <div class="m-3 p-2 border border-3 border-black">
-                    <div class="d-grid">
-                        <h4>{{ it.name }}</h4>
-                        <p>{{ it.price | currency }}</p>
+            <div class="m-3 p-2 border border-3 border-black">
+                <div class="d-grid">
+                    <h4>{{ it.name }}</h4>
+                    <p>{{ it.price | currency }}</p>
 
-                        <a class="btn btn-primary" [routerLink]="'/childlist/item/' + it.childlistitem_id">
-                            <fa-icon [icon]="faAlignLeft"></fa-icon>
-                            Description
-                        </a>
-                    </div>
+                    <a class="btn btn-primary" [routerLink]="'/childlist/item/' + it.childlistitem_id" [queryParams]="{hideCart: true}">
+                        <fa-icon [icon]="faAlignLeft"></fa-icon>
+                        Description
+                    </a>
                 </div>
             </div>
         }
     }
+    </article>
 
     <h2 class="col-md-12 mt-4">Article(s) réservé(s)</h2>
+    <article class="my-3 border border-3 border-black">
+    @if (countBought === 0) {
+        <div class="m-3 p-2 border border-3 border-black">
+            <p class="text-center m-0">Aucun(s) article(s) acheté(s)</p>
+        </div>
+    }
     @for (it of childlist.items; track it.childlistitem_id) {
         @if (it.boughtBy !== null) {
-            <div class="col-md-12">
-                <div class="m-3 p-2 border border-3 border-black">
-                    <div class="d-grid">
-                        <h4>{{ it.name }}</h4>
-                        <p>{{ it.price | currency }}</p>
+            <div class="m-3 p-2 border border-3 border-black">
+                <div class="d-grid">
+                    <h4>{{ it.name }}</h4>
+                    <p>{{ it.price | currency }}</p>
 
-                        <a class="btn btn-primary" [routerLink]="'/childlist/item/' + it.childlistitem_id">
-                            <fa-icon [icon]="faAlignLeft"></fa-icon>
-                            Description
-                        </a>
-                    </div>
+                    <a class="btn btn-primary" [routerLink]="'/childlist/item/' + it.childlistitem_id">
+                        <fa-icon [icon]="faAlignLeft"></fa-icon>
+                        Description
+                    </a>
                 </div>
             </div>
         }
     }
+    </article>
 </section>
