--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     cursor: url("/assets/curseur.png"), default !important;
 }
@@ -7,6 +9,7 @@ body {
     line-height: 1.42857143;
     color: #333;
     background-color: #fff;
+    font-family: Cantarell, system-ui;
 }
 
 section {
@@ -26,9 +29,6 @@ section {
     }
 
     & > article {
-        border: 3px solid black;
-        margin-bottom: 15px;
-        margin-top: 15px;
         background-color: #C6E2FF;
 
         &:hover {
@@ -37,7 +37,6 @@ section {
         }
 
         & > div {
-            border: 3px solid black;
             padding: 10px;
             margin-bottom: 10px;
             background-color: white;
@@ -49,12 +48,11 @@ app-form-error > .invalid-feedback {
     display: block;
 }
 
-header {
-    margin-right: auto;
-
-    & > div {
-        padding-right: 0;
-    }
+.header-img {
+    height: 200px;
+    background-image: url("/assets/header.png");
+    background-position: top;
+    background-size: cover;
 }
 
 /* Importing Bootstrap SCSS file. */
