--- a/src/app/features/childlist/pages/index/index.component.html
+++ b/src/app/features/childlist/pages/index/index.component.html
@@ -4,7 +4,7 @@
     @for (cl of childlists; track cl.childlist_id) {
         @if (cl.items.length > 0) {
             <article class="my-3 border border-3 border-black">
-                <h3 class="mt-3 text-center">{{ cl.firstname }} {{ cl.lastname }}</h3>
+                <h3 class="mt-3 text-center">{{ cl.firstname | titlecase }} {{ cl.lastname | titlecase }}</h3>
 
                 @for (it of cl.items; track it.childlistitem_id) {
                     @if (it.boughtBy === null) {
